<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="general">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="team">Команда</string>
    <string name="developer_name_1">Паркин Даниил - лид</string>
    <string name="developer_name_2">Чарухин Денис</string>
    <string name="developer_name_3">Шахидов Ахмед</string>
    <string name="developer_name_4">Гурова Надежда</string>
    <string name="developer_name_5">Газарова Полина</string>
    <string name="team_members">Над приложением работали</string>
    <string name="salary_is_not_specified">зарплата не указана</string>
    <string name="from">"от"</string>
    <string name="to">"до"</string>
    <string name="comma">","</string>
    <string name="filtering_settings">Настройки фильтрации</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="input_search_request">Введите запрос</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="no_internet_connection">Нет интернета</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="count_get_list_of_vacancies">Не удалось получить список вакансий</string>
    <string name="found">Найдено</string>
    <string name="vacancy">вакансий</string>
    <string name="empty_list">Список пуст</string>
    <string name="job_vacancy">Вакансия</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="Unavailable">Вакансия не найдена или\nудалена</string>
    <string name="Contacts">Контакты</string>
    <string name="contact_person">Контактное лицо</string>
    <string name="workplace">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_sum_of_money">Введите сумму</string>
    <string name="not_show_without_salary">Не показывать без зарплаты</string>
    <string name="reset">Сбросить</string>
    <string name="apply">Применить</string>
    <string name="industry_selection">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="no_industry">Такой отрасли нет</string>
    <string name="region_selection">Выбор региона</string>
    <string name="enter_region">Введите регион</string>
    <string name="no_region">Такого региона нет</string>
    <string name="failed_to_get_list">Не удалось получить список</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="select">Выбрать</string>
    <string name="workplace_selection">Выбор места работы</string>
    <string name="country_selection">Выбор страны</string>
</resources>
