<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.filtration.industry.IndustryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarIndustrySearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_64"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/industrySelectionBackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_16"
            android:layout_marginTop="@dimen/indent_20"
            android:contentDescription="@string/filtering_settings"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/industryHeader"
            style="@style/toolbar_style"
            android:layout_marginStart="@dimen/indent_16"
            android:layout_marginTop="@dimen/indent_20"
            android:text="@string/industry_selection"
            app:layout_constraintStart_toEndOf="@+id/industrySelectionBackImageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/industryLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarIndustrySearch">

        <EditText
            android:id="@+id/industryInput"
            style="@style/search_industry_style"
            android:autofillHints="no"
            android:focusable="true"
            android:hint="@string/enter_industry"
            android:textCursorDrawable="@drawable/cursor_for_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iconIndustrySearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/indent_32"
        android:contentDescription="@string/vacancy_search"
        android:src="@drawable/baseline_search_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/industryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/industryLayout" />

    <ImageView
        android:id="@+id/iconIndustryClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/indent_32"
        android:contentDescription="@string/vacancy_search"
        android:src="@drawable/baseline_close_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/industryLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/industryLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_8"
        android:layout_marginEnd="16dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/industryLayout" />

    <LinearLayout
        android:id="@+id/industryPlaceholderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/industryLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/industryPlaceholderImage"
            android:layout_width="328dp"
            android:layout_height="223dp"
            android:contentDescription="@string/industry_selection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_cat" />

        <TextView
            android:id="@+id/industryPlaceholderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_16"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/no_industry"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_22" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/industryProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/industryLayout" />

    <Button
        android:id="@+id/industryApplyButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_60"
        android:layout_marginHorizontal="@dimen/indent_16"
        android:layout_marginBottom="@dimen/indent_24"
        android:background="@drawable/blue_rounded_background"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
