<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.filtration.place.region.FilterRegionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarRegionSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_64"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/regionSelectionBackImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/indent_16"
            android:contentDescription="@string/filtering_settings"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@+id/regionHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/regionHeader" />

        <TextView
            android:id="@+id/regionHeader"
            style="@style/toolbar_style"
            android:layout_marginStart="@dimen/indent_16"
            android:layout_marginTop="@dimen/indent_20"
            android:text="@string/region_selection"
            app:layout_constraintStart_toEndOf="@+id/regionSelectionBackImageView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/regionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarRegionSearch">

        <EditText
            android:id="@+id/regionInput"
            style="@style/search_industry_style"
            android:autofillHints="no"
            android:hint="@string/enter_region"
            android:textCursorDrawable="@drawable/cursor_for_edittext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry,VisualLintTextFieldSize,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/iconRegionSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/indent_32"
        android:contentDescription="@string/vacancy_search"
        android:src="@drawable/baseline_search_24"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/regionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regionLayout" />

    <ImageView
        android:id="@+id/iconRegionClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/indent_32"
        android:contentDescription="@string/vacancy_search"
        android:src="@drawable/baseline_close_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/regionLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/regionLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/regionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/indent_8"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionLayout" />

    <LinearLayout
        android:id="@+id/regionPlaceholderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionLayout"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/regionPlaceholderImage"
            android:layout_width="328dp"
            android:layout_height="223dp"
            android:contentDescription="@string/region_selection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_cat" />

        <TextView
            android:id="@+id/regionPlaceholderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_16"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/no_region"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_22" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/regionProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/regionLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
