<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.filtration.place.country.FilterCountryFragment">

    <ImageView
        android:id="@+id/countryBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/country_selection"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/countryHeader"
        style="@style/toolbar_style"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_20"
        android:text="@string/country_selection"
        app:layout_constraintStart_toEndOf="@+id/countryBackImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/countryRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="top"
        android:layout_marginTop="@dimen/indent_36"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryHeader" />

    <LinearLayout
        android:id="@+id/countryPlaceholderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryHeader"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/countryPlaceholderImage"
            android:layout_width="328dp"
            android:layout_height="223dp"
            android:contentDescription="@string/region_selection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder_carpet" />

        <TextView
            android:id="@+id/countryPlaceholderMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/indent_16"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/failed_to_get_list"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_22" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/countryProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/countryHeader"/>

</androidx.constraintlayout.widget.ConstraintLayout>
