<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.filtration.FiltrationFragment">

    <ImageView
        android:id="@+id/filtrationBackImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_16"
        android:contentDescription="@string/filtering_settings"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/filtrationHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filtrationHeader" />

    <TextView
        android:id="@+id/filtrationHeader"
        style="@style/toolbar_style"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_20"
        android:text="@string/filtering_settings"
        app:layout_constraintStart_toEndOf="@+id/filtrationBackImageView"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Обертка для "Место работы" -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/workplaceContainer"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_60"
        android:layout_marginTop="36dp"
        android:background="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filtrationHeader">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filtrationWorkplaceInputLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/height_60"
            android:layout_marginEnd="36dp"
            android:background="?attr/colorSecondary"
            android:clickable="true"
            android:hint="@string/workplace"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:textAlignment="viewStart"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="?attr/colorSecondary"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filtrationWorkplaceEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/ys_display_regular"
                android:inputType="textCapSentences"
                android:lines="1"
                android:singleLine="true"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_size_16"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/workplaceArrowForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/indent_16"
            android:contentDescription="@string/filtering_settings"
            android:src="@drawable/baseline_arrow_forward"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/workplaceClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/indent_16"
            android:contentDescription="@string/filtering_settings"
            android:src="@drawable/baseline_close_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Обертка для "Отрасль" -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/industryContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        android:minHeight="@dimen/height_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workplaceContainer">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filtrationIndustryInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:background="?attr/colorSecondary"
            android:hint="@string/industry"
            android:imeOptions="actionDone|flagNoExtractUi"
            android:textAlignment="viewStart"
            android:textColorHint="@color/gray"
            app:boxBackgroundColor="?attr/colorSecondary"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/filtrationIndustryEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:fontFamily="@font/ys_display_regular"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="@dimen/text_size_16"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/industryArrowForward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/indent_16"
            android:contentDescription="@string/filtering_settings"
            android:src="@drawable/baseline_arrow_forward"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/filtrationIndustryInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filtrationIndustryInputLayout" />

        <ImageView
            android:id="@+id/industryClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/indent_16"
            android:contentDescription="@string/filtering_settings"
            android:src="@drawable/baseline_close_24"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expectedSalaryInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_24"
        android:hint="@string/expected_salary"
        android:textColorHint="?attr/colorPrimaryVariant"
        app:boxCollapsedPaddingTop="@dimen/indent_8"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:expandedHintEnabled="false"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industryContainer"
        app:placeholderTextColor="@color/gray">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/expectedSalaryEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gray_rounded_background"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/enter_sum_of_money"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorPrimaryVariant"
            android:textSize="@dimen/text_size_16"
            tools:ignore="VisualLintTextFieldSize"
            tools:text="40000" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/salaryClearImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/indent_16"
        android:contentDescription="@string/filtering_settings"
        android:src="@drawable/baseline_close_24"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/expectedSalaryInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/expectedSalaryInputLayout"
        app:layout_constraintTop_toTopOf="@+id/expectedSalaryInputLayout" />

    <TextView
        android:id="@+id/noSalaryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/indent_16"
        android:layout_marginTop="@dimen/indent_24"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/not_show_without_salary"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expectedSalaryInputLayout" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/noSalaryCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/indent_16"
        app:buttonTint="@color/blue"
        app:colorAccent="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/noSalaryTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/noSalaryTextView"
        tools:checked="true" />

    <Button
        android:id="@+id/resetButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_60"
        android:layout_marginHorizontal="@dimen/indent_16"
        android:layout_marginBottom="@dimen/indent_24"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/reset"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="@dimen/text_size_16"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_60"
        android:layout_marginHorizontal="@dimen/indent_16"
        android:layout_marginBottom="@dimen/indent_8"
        android:background="@drawable/blue_rounded_background"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/apply"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
